# xneur-devel

./: .gitignore  README.md  XML_daily.xml  xneur_0.17.0+git3-0precise_source.build  xneur_0.17.0+git3-0trusty_source.build  xneur_0.17.0+git3-0vivid_source.build  xneur_0.17.0+git3-0wily_source.build  xneur_full_clear.sh
branches/0.3.0/gxneur/: configure.in  gxneur.glade
branches/0.3.0/xneur/: Makefile.am  NEWS  autogen.sh  configure.in
branches/0.5.0/gxneur/: Makefile.am  configure.in  gxneur.glade
branches/0.5.0/xneur/: AUTHORS  NEWS  configure.in
gxneur/: .anjuta_sym_db.db  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  NEWS~  autogen.sh  autogen.sh~  config.h  config.h.in~  config.status  configure  configure.ac  configure.in~  gxneur-0.16.0.tar.bz2  gxneur-0.17.0.tar.bz2  gxneur.1  gxneur.desktop  gxneur.desktop.in  libtool
gxneur/.anjuta/session/: anjuta.session  dock-layout.xml
gxneur/autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
gxneur/data/: Makefile.am  com.gxneur.settings.gschema.xml
gxneur/debian/: changelog  control  control~  copyright  gxneur.sgml  menu  watch
gxneur/debian/source/: include-binaries
gxneur/glade/: Makefile  Makefile.am  Makefile.in  abbr_add.glade  about.glade  action_add.glade  app_add.glade  choose_file.glade  config.glade  list.glade  rule_add.glade
gxneur/pixmaps/: 1.list  CMakeLists.txt  Makefile  Makefile.am  Makefile.in
gxneur/po/: CMakeLists.txt  LINGUAS  Makefile  Makefile.in  be.gmo  be.po  be.po~  de.gmo  de.po  de.po~  es.gmo  es.po  es.po~  gxneur.pot  gxneur.pot~  he.gmo  he.po  he.po~  ro.gmo  ro.po  ro.po~  ru.gmo  ru.po  ru.po~  uk.gmo  uk.po  uk.po~
gxneur/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  configuration.c  configuration.h  configuration.h~  gxneur  main.c  misc.c  misc.c~  misc.h  misc.h~  support.c  support.h  tray_widget.c  tray_widget.h  trayicon.c  trayicon.c~  trayicon.h  xkb.c  xkb.h
gxneur/src/.deps/: gxneur-callbacks.Po  gxneur-configuration.Po  gxneur-main.Po  gxneur-misc.Po  gxneur-support.Po  gxneur-tray_widget.Po  gxneur-trayicon.Po  gxneur-xkb.Po
gxneur/ui/: CMakeLists.txt  Makefile.am  abbr_add.ui  about.ui  action_add.ui  app_add.ui  choose_file.ui  config.ui  list.ui  rule_add.ui  usr_action_add.ui
kdeneur/: AUTHORS  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.in  configure.in~  kdeneur-0.16.0.tar.bz2  kdeneur-0.17.0.tar.bz2  kdeneur.1  kdeneur.desktop  libtool
kdeneur/autom4te.cache/: output.0  requests  traces.0  traces.1
kdeneur/debian/: control  control~  menu  rules  rules.orig  watch
kdeneur/i18n/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in  kdeneur_ru_RU.qm  kdeneur_ru_RU.ts
kdeneur/pixmaps/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in
kdeneur/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.am~  Makefile.in  addrules.cpp  addrules.h  addrules.ui  adduseraction.cpp  adduseraction.h  adduseraction.ui  edithotkey.cpp  edithotkey.h  edithotkey.ui  frmabout.cpp  frmabout.h  frmabout.ui  frmaddabbreviature.cpp  frmaddabbreviature.h  frmaddabbreviature.ui  frmsettings.cpp  frmsettings.h  frmsettings.ui  getnameapp.cpp  getnameapp.h  getnameapp.ui  kdeneur.cpp  kdeneur.h  kxneurtray.cpp  kxneurtray.h  main.cpp  moc_addrules.cpp  moc_adduseraction.cpp  moc_edithotkey.cpp  moc_frmabout.cpp  moc_frmaddabbreviature.cpp  moc_frmsettings.cpp  moc_getnameapp.cpp  moc_kdeneur.cpp  moc_kxneurtray.cpp  (+24 more)
kdeneur/src/.deps/: kdeneur-addrules.Po  kdeneur-adduseraction.Po  kdeneur-edithotkey.Po  kdeneur-frmabout.Po  kdeneur-frmaddabbreviature.Po  kdeneur-frmsettings.Po  kdeneur-main.Po  (+16 more)
xcurf/: Makefile  Makefile.am  Makefile.in  README  TODO.tasks  config.h  config.h.in  config.status  configure  configure.ac  libtool
xcurf/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
xcurf/debian/: changelog  control  rules  watch
xcurf/pixmaps/: Makefile  Makefile.am  Makefile.in
xcurf/po/: Makefile  Makefile.in
xcurf/src/: Makefile  Makefile.am  Makefile.in  main.c  xcurf
xneur/: .anjuta_sym_db.db  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  NEWS  NEWS~  README  README.md  aclocal.m4  autogen.sh  autogen.sh~  config.h  config.h.in~  config.status  configure  configure.ac  configure.in~  err.txt  libtool  xnconfig.pc  xnconfig.pc.in  xneur-0.17.0.tar.bz2  xneur.1  xneur.pc  xneur.pc.in  xneur.spec  xneurrc.5
xneur/autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
xneur/debian/: changelog  control  control~  copyright  libxneur-dev.install  libxneur.lintian-overrides  libxneur.shlibs  libxneur.shlibs~  rules  shlibs.local  watch  xneur.NEWS  xneur.README.Debian  xneur.install  xneur.lintian-overrides  xneur.preinst  xneurrc.sed
xneur/etc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  xneurrc
xneur/lib/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
xneur/pixmaps/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
xneur/plugins/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
xneur/po/: CMakeLists.txt  ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  be.gmo  be.po  de.gmo  de.po  ro.gmo  ro.po  ru.gmo  ru.po  uk.gmo  uk.po  xneur.pot
xneur/share/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
xneur/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  newlang_creation.c  newlang_creation.h  xneur  xneur.c  xneur.c~
xneurchecker/: .anjuta_sym_db.db  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  configure.in~  libtool
xneurchecker/.anjuta/: default.profile
xneurchecker/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
xneurchecker/debian/: changelog  control  copyright  watch
xneurchecker/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  main.c~
(+4494 files in other folders)
