AC_INIT(configure.in)
AC_PREREQ(2.59)
AM_CONFIG_HEADER(config.h)

AC_CONFIG_MACRO_DIR(m4)
AM_INIT_AUTOMAKE(xneurchecker, 0.4)

AC_PROG_LIBTOOL
AC_PROG_INSTALL

AC_LANG_C
AM_PROG_CC_C_O
AC_PROG_MAKE_SET

AC_HEADER_STDC

PKG_PROG_PKG_CONFIG([0.20])

PKG_CHECK_MODULES(XNEURCONF, [xnconfig = 0.17.0])
PKG_CHECK_MODULES(XNEURLIB, [xneur = 0.17.0])

AM_GNU_GETTEXT_VERSION([0.16.1])
AM_GNU_GETTEXT([external])

DEFAULT_CFLAGS="-Wall -Wextra -Werror -g0 -fPIC -std=gnu99"
AC_SUBST(DEFAULT_CFLAGS)

AC_OUTPUT([Makefile src/Makefile])

cat << EOF

$PACKAGE $VERSION configured successfully:

	Installing into:        $prefix

	Compiler flags:         $CFLAGS

	XNeur Config Library flags:	$XNEURCONF_CFLAGS
	XNeur Config Library libs:	$XNEURCONF_LIBS

	XNeur Library flags:	$XNEURLIB_CFLAGS
	XNeur Library libs:	$XNEURLIB_LIBS

EOF
