set(ICONS
    hicolor_apps_16x16_gxneur.png
    hicolor_apps_22x22_gxneur.png
    hicolor_apps_24x24_gxneur.png
    hicolor_apps_32x32_gxneur.png
    hicolor_apps_48x48_gxneur.png
    hicolor_apps_scalable_gxneur.svg
    hicolor_apps_16x16_gxneur-am.png
    hicolor_apps_22x22_gxneur-am.png
    hicolor_apps_24x24_gxneur-am.png
    hicolor_apps_32x32_gxneur-am.png
    hicolor_apps_48x48_gxneur-am.png
    hicolor_apps_scalable_gxneur-am.svg
    hicolor_apps_16x16_gxneur-bg.png
    hicolor_apps_22x22_gxneur-bg.png
    hicolor_apps_24x24_gxneur-bg.png
    hicolor_apps_32x32_gxneur-bg.png
    hicolor_apps_48x48_gxneur-bg.png
    hicolor_apps_scalable_gxneur-bg.svg
    hicolor_apps_16x16_gxneur-by.png
    hicolor_apps_22x22_gxneur-by.png
    hicolor_apps_24x24_gxneur-by.png
    hicolor_apps_32x32_gxneur-by.png
    hicolor_apps_48x48_gxneur-by.png
    hicolor_apps_scalable_gxneur-by.svg
    hicolor_apps_16x16_gxneur-cz.png
    hicolor_apps_22x22_gxneur-cz.png
    hicolor_apps_24x24_gxneur-cz.png
    hicolor_apps_32x32_gxneur-cz.png
    hicolor_apps_48x48_gxneur-cz.png
    hicolor_apps_scalable_gxneur-cz.svg
    hicolor_apps_16x16_gxneur-de.png
    hicolor_apps_22x22_gxneur-de.png
    hicolor_apps_24x24_gxneur-de.png
    hicolor_apps_32x32_gxneur-de.png
    hicolor_apps_48x48_gxneur-de.png
    hicolor_apps_scalable_gxneur-de.svg
    hicolor_apps_16x16_gxneur-ee.png
    hicolor_apps_22x22_gxneur-ee.png
    hicolor_apps_24x24_gxneur-ee.png
    hicolor_apps_32x32_gxneur-ee.png
    hicolor_apps_48x48_gxneur-ee.png
    hicolor_apps_scalable_gxneur-ee.svg
    hicolor_apps_16x16_gxneur-en.png
    hicolor_apps_22x22_gxneur-en.png
    hicolor_apps_24x24_gxneur-en.png
    hicolor_apps_32x32_gxneur-en.png
    hicolor_apps_48x48_gxneur-en.png
    hicolor_apps_scalable_gxneur-en.svg
    hicolor_apps_16x16_gxneur-es.png
    hicolor_apps_22x22_gxneur-es.png
    hicolor_apps_24x24_gxneur-es.png
    hicolor_apps_32x32_gxneur-es.png
    hicolor_apps_48x48_gxneur-es.png
    hicolor_apps_scalable_gxneur-es.svg
    hicolor_apps_16x16_gxneur-fi.png
    hicolor_apps_22x22_gxneur-fi.png
    hicolor_apps_24x24_gxneur-fi.png
    hicolor_apps_32x32_gxneur-fi.png
    hicolor_apps_48x48_gxneur-fi.png
    hicolor_apps_scalable_gxneur-fi.svg
    hicolor_apps_16x16_gxneur-fr.png
    hicolor_apps_22x22_gxneur-fr.png
    hicolor_apps_24x24_gxneur-fr.png
    hicolor_apps_32x32_gxneur-fr.png
    hicolor_apps_48x48_gxneur-fr.png
    hicolor_apps_scalable_gxneur-fr.svg
    hicolor_apps_16x16_gxneur-ge.png
    hicolor_apps_22x22_gxneur-ge.png
    hicolor_apps_24x24_gxneur-ge.png
    hicolor_apps_32x32_gxneur-ge.png
    hicolor_apps_48x48_gxneur-ge.png
    hicolor_apps_scalable_gxneur-ge.svg
    hicolor_apps_16x16_gxneur-gr.png
    hicolor_apps_22x22_gxneur-gr.png
    hicolor_apps_24x24_gxneur-gr.png
    hicolor_apps_32x32_gxneur-gr.png
    hicolor_apps_48x48_gxneur-gr.png
    hicolor_apps_scalable_gxneur-gr.svg
    hicolor_apps_16x16_gxneur-hr.png
    hicolor_apps_22x22_gxneur-hr.png
    hicolor_apps_24x24_gxneur-hr.png
    hicolor_apps_32x32_gxneur-hr.png
    hicolor_apps_48x48_gxneur-hr.png
    hicolor_apps_scalable_gxneur-hr.svg
    hicolor_apps_16x16_gxneur-hu.png
    hicolor_apps_22x22_gxneur-hu.png
    hicolor_apps_24x24_gxneur-hu.png
    hicolor_apps_32x32_gxneur-hu.png
    hicolor_apps_48x48_gxneur-hu.png
    hicolor_apps_scalable_gxneur-hu.svg
    hicolor_apps_16x16_gxneur-is.png
    hicolor_apps_22x22_gxneur-is.png
    hicolor_apps_24x24_gxneur-is.png
    hicolor_apps_32x32_gxneur-is.png
    hicolor_apps_48x48_gxneur-is.png
    hicolor_apps_scalable_gxneur-is.svg
    hicolor_apps_16x16_gxneur-it.png
    hicolor_apps_22x22_gxneur-it.png
    hicolor_apps_24x24_gxneur-it.png
    hicolor_apps_32x32_gxneur-it.png
    hicolor_apps_48x48_gxneur-it.png
    hicolor_apps_scalable_gxneur-it.svg
    hicolor_apps_16x16_gxneur-kz.png
    hicolor_apps_22x22_gxneur-kz.png
    hicolor_apps_24x24_gxneur-kz.png
    hicolor_apps_32x32_gxneur-kz.png
    hicolor_apps_48x48_gxneur-kz.png
    hicolor_apps_scalable_gxneur-kz.svg
    hicolor_apps_16x16_gxneur-lt.png
    hicolor_apps_22x22_gxneur-lt.png
    hicolor_apps_24x24_gxneur-lt.png
    hicolor_apps_32x32_gxneur-lt.png
    hicolor_apps_48x48_gxneur-lt.png
    hicolor_apps_scalable_gxneur-lt.svg
    hicolor_apps_16x16_gxneur-lv.png
    hicolor_apps_22x22_gxneur-lv.png
    hicolor_apps_24x24_gxneur-lv.png
    hicolor_apps_32x32_gxneur-lv.png
    hicolor_apps_48x48_gxneur-lv.png
    hicolor_apps_scalable_gxneur-lv.svg
    hicolor_apps_16x16_gxneur-no.png
    hicolor_apps_22x22_gxneur-no.png
    hicolor_apps_24x24_gxneur-no.png
    hicolor_apps_32x32_gxneur-no.png
    hicolor_apps_48x48_gxneur-no.png
    hicolor_apps_scalable_gxneur-no.svg
    hicolor_apps_16x16_gxneur-pl.png
    hicolor_apps_22x22_gxneur-pl.png
    hicolor_apps_24x24_gxneur-pl.png
    hicolor_apps_32x32_gxneur-pl.png
    hicolor_apps_48x48_gxneur-pl.png
    hicolor_apps_scalable_gxneur-pl.svg
    hicolor_apps_16x16_gxneur-pt.png
    hicolor_apps_22x22_gxneur-pt.png
    hicolor_apps_24x24_gxneur-pt.png
    hicolor_apps_32x32_gxneur-pt.png
    hicolor_apps_48x48_gxneur-pt.png
    hicolor_apps_scalable_gxneur-pt.svg
    hicolor_apps_16x16_gxneur-ro.png
    hicolor_apps_22x22_gxneur-ro.png
    hicolor_apps_24x24_gxneur-ro.png
    hicolor_apps_32x32_gxneur-ro.png
    hicolor_apps_48x48_gxneur-ro.png
    hicolor_apps_scalable_gxneur-ro.svg
    hicolor_apps_16x16_gxneur-ru.png
    hicolor_apps_22x22_gxneur-ru.png
    hicolor_apps_24x24_gxneur-ru.png
    hicolor_apps_32x32_gxneur-ru.png
    hicolor_apps_48x48_gxneur-ru.png
    hicolor_apps_scalable_gxneur-ru.svg
    hicolor_apps_16x16_gxneur-se.png
    hicolor_apps_22x22_gxneur-se.png
    hicolor_apps_24x24_gxneur-se.png
    hicolor_apps_32x32_gxneur-se.png
    hicolor_apps_48x48_gxneur-se.png
    hicolor_apps_scalable_gxneur-se.svg
    hicolor_apps_16x16_gxneur-si.png
    hicolor_apps_22x22_gxneur-si.png
    hicolor_apps_24x24_gxneur-si.png
    hicolor_apps_32x32_gxneur-si.png
    hicolor_apps_48x48_gxneur-si.png
    hicolor_apps_scalable_gxneur-si.svg
    hicolor_apps_16x16_gxneur-sk.png
    hicolor_apps_22x22_gxneur-sk.png
    hicolor_apps_24x24_gxneur-sk.png
    hicolor_apps_32x32_gxneur-sk.png
    hicolor_apps_48x48_gxneur-sk.png
    hicolor_apps_scalable_gxneur-sk.svg
    hicolor_apps_16x16_gxneur-sr.png
    hicolor_apps_22x22_gxneur-sr.png
    hicolor_apps_24x24_gxneur-sr.png
    hicolor_apps_32x32_gxneur-sr.png
    hicolor_apps_48x48_gxneur-sr.png
    hicolor_apps_scalable_gxneur-sr.svg
    hicolor_apps_16x16_gxneur-ua.png
    hicolor_apps_22x22_gxneur-ua.png
    hicolor_apps_24x24_gxneur-ua.png
    hicolor_apps_32x32_gxneur-ua.png
    hicolor_apps_48x48_gxneur-ua.png
    hicolor_apps_scalable_gxneur-ua.svg
    hicolor_apps_16x16_gxneur-us.png
    hicolor_apps_22x22_gxneur-us.png
    hicolor_apps_24x24_gxneur-us.png
    hicolor_apps_32x32_gxneur-us.png
    hicolor_apps_48x48_gxneur-us.png
    hicolor_apps_scalable_gxneur-us.svg
    hicolor_apps_16x16_gxneur-uz.png
    hicolor_apps_22x22_gxneur-uz.png
    hicolor_apps_24x24_gxneur-uz.png
    hicolor_apps_32x32_gxneur-uz.png
    hicolor_apps_48x48_gxneur-uz.png
    hicolor_apps_scalable_gxneur-uz.svg
    hicolor_apps_16x16_gxneur-x3.png
    hicolor_apps_22x22_gxneur-x3.png
    hicolor_apps_24x24_gxneur-x3.png
    hicolor_apps_32x32_gxneur-x3.png
    hicolor_apps_48x48_gxneur-x3.png
    hicolor_apps_scalable_gxneur-x3.svg
)

foreach(iterator ${ICONS})
    string(REPLACE "_" ";" PARSED_LIST ${iterator})
    list(GET PARSED_LIST 0 THEME)
    list(GET PARSED_LIST 1 CONTEXT)
    list(GET PARSED_LIST 2 SIZE)
    list(GET PARSED_LIST 3 ICONFILE)
    install(FILES ${iterator} DESTINATION share/icons/${THEME}/${SIZE}/${CONTEXT} RENAME ${ICONFILE})
endforeach(iterator)

set(PIXMAPS
    am.png
    bg.png
    by.png
    cz.png
    de.png
    en.png
    es.png
    ee.png
    fi.png
    fr.png
    ge.png
    gr.png
    gxneur.png
    hr.png
    hu.png
    is.png
    it.png
    kz.png
    lt.png
    lv.png
    no.png
    pl.png
    pt.png
    ro.png
    se.png
    si.png
    sk.png
    sr.png
    ru.png
    ua.png
    us.png
    uz.png
    x3.png
)

foreach(iterator ${PIXMAPS})
    install(FILES ${iterator} DESTINATION share/gxneur/pixmaps)
endforeach(iterator)
